@@ -1,0 +1,4 @@
+#!/bin/bash
+
+g++ --std=c++11 -Wall -o driver driver.cc -L../tmp -lcsv -lbobcat -s
+
