@@ -1,4 +1,6 @@
-bobcat (3.21.02)
+bobcat (3.22.00)
+
+  * Added new class CSV, handling comma separated values
 
   * Iterator needs a location to store the value returned by Type
     &operator*(): the object returning the Type value may vanish immediately
@@ -6,7 +8,7 @@ bobcat (3.21.02)
     receiving a value when operator* is called, and returning a reference to
     the value stored in the shared_ptr.
 
-
+    
 
 
 bobcat (3.21.01)
